[feat] #202 읽기 권한 검증 및 코드 개선